<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="@drawable/update"
    tools:context="com.example.vehicles.UpdateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="290dp"
        android:orientation="vertical"
        android:padding="20dp">


        <EditText
            android:id="@+id/referenceVehicleNumber"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/white_border"
            android:gravity="start|center_vertical"
            android:hint="@string/enter_vehicle_number"
            android:padding="16dp"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/updateOwnerName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/white_border"
            android:gravity="start|center_vertical"
            android:hint="@string/enter_owner_name"
            android:padding="16dp"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/updateVehicleBrand"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/white_border"
            android:gravity="start|center_vertical"
            android:hint="@string/enter_vehicle_brand"
            android:padding="16dp"
            android:textColor="@color/white" />


        <EditText
            android:id="@+id/updateVehicleRTO"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/white_border"
            android:gravity="start|center_vertical"
            android:hint="@string/enter_vehicle_rto"
            android:padding="16dp"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/updateButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/white"
            android:text="@string/update"
            android:textColor="@color/green"
            android:textSize="18sp"
            app:cornerRadius="20dp" />


    </LinearLayout>

</LinearLayout>