<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/map"
        android:layout_marginTop="16dp"
        android:background="@drawable/upload"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:padding="20dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/uploadOwnerName"
                android:background="@drawable/white_border"
                android:layout_marginTop="20dp"
                android:hint="@string/enter_owner_name"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:gravity="start|center_vertical"
                android:padding="16dp"
                android:textColor="@color/white"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/uploadVehicleBrand"
                android:background="@drawable/white_border"
                android:layout_marginTop="20dp"
                android:hint="@string/enter_vehicle_brand"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:gravity="start|center_vertical"
                android:padding="16dp"
                android:textColor="@color/white"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/uploadVehicleNumber"
                android:background="@drawable/white_border"
                android:layout_marginTop="20dp"
                android:hint="@string/enter_vehicle_number"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="start|center_vertical"
                android:padding="16dp"
                android:textColor="@color/white"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/uploadVehicleRTO"
                android:background="@drawable/white_border"
                android:layout_marginTop="20dp"
                android:hint="@string/enter_vehicle_rto"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="start|center_vertical"
                android:padding="16dp"
                android:textColor="@color/white"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/saveButton"
                android:text="@string/save"
                android:backgroundTint="@color/white"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                app:cornerRadius="20dp"
                android:textColor="@color/green"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
