<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/admin"
    android:gravity="center_vertical"
    tools:context=".OptionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="350dp"
        android:layout_gravity="center_horizontal"
        android:padding="20dp">

        <Button
            android:id="@+id/mainUpload"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/green"
            android:text="@string/upload"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:text="@string/update"
                android:id="@+id/mainUpdate"
                android:textSize="18sp"
                android:padding="16dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:textColor="@color/green"
                app:strokeColor="@color/green"
                app:strokeWidth="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:text="@string/delete"
                android:id="@+id/mainDelete"
                android:textSize="18sp"
                android:padding="16dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:textColor="@color/green"
                app:strokeColor="@color/green"
                app:strokeWidth="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>