<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/user"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/searchVehicleNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/enter_vehicle_number"
        android:padding="12dp"
        android:textColor="@color/green"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:padding="12dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchVehicleNumber"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/green_border"
        app:layout_constraintTop_toBottomOf="@id/searchButton"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ownerName"
                    android:layout_weight="1"
                    android:text="@string/owner_name"
                    android:textStyle="bold"
                    android:textColor="@color/green"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/readOwnerName"
                    android:text=""
                    android:layout_weight="1"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/green"
                    android:textSize="18sp"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:alpha="0.5"
                android:background="@color/green"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:padding="8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/vehicleBrand"
                    android:layout_weight="1"
                    android:text="@string/vehicle_brand"
                    android:textStyle="bold"
                    android:textColor="@color/green"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/readVehicleBrand"
                    android:text=""
                    android:layout_weight="1"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/green"
                    android:textSize="18sp"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:alpha="0.5"
                android:background="@color/green"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:padding="8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/vehicleRTO"
                    android:layout_weight="1"
                    android:text="@string/vehicle_rto"
                    android:textStyle="bold"
                    android:textColor="@color/green"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/readVehicleRTO"
                    android:text=""
                    android:layout_weight="1"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/green"
                    android:textSize="18sp"/>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:alpha="0.5"
                android:background="@color/green"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:padding="8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/vehicleCountry"
                    android:layout_weight="1"
                    android:text="@string/vehicle_country"
                    android:textStyle="bold"
                    android:textColor="@color/green"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/readVehicleCountry"
                    android:text=""
                    android:layout_weight="1"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/green"
                    android:textSize="18sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>